web/static/default.css
/* ... */
ol:not(.mycomarkup-doc ol) a:hover { text-decoration: underline; }
.media-type-badge { font-size: smaller; color: #999; }
.media-type-badge:not(:first-of-type)::before { content: " • "; }

/* General element positions, from small to big */
/* Phones and whatnot */
body { display: grid; row-gap: .5rem; }
header { width: 100%; display: flex; font-family: osmarks-mono, sans-serif; }
.logo {
	padding-left: 3em;
	display: flex;
}
.logo img {
	height: 4em;
	width: 4.45em;
}
.logo .ominous {
	width: 8em;
	align-items: center;
	display: flex;
	padding-left: 0.5em;
}
.logo .ominous span {
	text-align: center;
}

.layout-card li { list-style-type: none; }

@media screen and (max-width: 800px) {
	.amnt-grid { grid-template-columns: 1fr; }
	body { grid-template-columns: auto; grid-template-rows: auto auto auto; }
	.main-width { width: 100%; }
	main { padding: .5rem 1rem 1rem 1rem; }
	.logo .ominous { display: none; }
	.logo { padding-left: 1em; }
}

@media screen and (min-width: 500px) {
	.non-existent-hypha__way {
		float: left;
		width: 50%;
	}

	.non-existent-hypha__ways::after {
		content: '';
		display: block;
		clear: both;
	}
}

/* No longer a phone but still small screen: center main */
@media screen and (min-width: 801px) {
	.main-width { padding: 1rem 2rem; width: 800px; margin: 0 auto; }
	.layout-card { width: 800px; margin: 0 auto; }
	.ominous { display: none; }
}


/* Wide enough to fit two columns ok */
@media screen and (min-width: 1100px) {
	body { display: grid; grid-template-columns: auto 1fr; column-gap: 1rem; margin: 0 1rem; row-gap: .5rem; }
	header { grid-column: 1 / span 2; grid-row: 1 / span 1; margin: 0; }
	main { grid-column: 1 / span 1; grid-row: 2 / span 2; }
	main.main-width { margin-left: .5rem; }
	.markup-toolbar, .help-topics, .categories-card { grid-column: 2 / span 1; grid-row: 2 / span 1; }
	.action-toolbar { grid-column: 2 / span 1; grid-row: 3 / span 1; }
	.layout-card { width: 100%; margin-left: -.5rem; }
	.edit-toolbar__buttons {display: grid; }
}

@media screen and (min-width: 1150px) {
	.edit-toolbar__buttons { grid-template-columns: 1fr 1fr; grid-column-gap: .125rem; }
}

@media screen and (min-width: 1200px) {
	body { grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr); }
	header { grid-column: 1 / span 3; grid-row: 1 / span 1; margin: 0; }
	.layout-card {max-width: 18rem;}
	.main-width { margin: 0 auto; }
	main.main-width { grid-column: 2 / span 1; grid-row: 2 / span 3; margin: 0; }
	.markup-toolbar, .help-topics { grid-column: 3 / span 1; margin-left: -.5rem; grid-row: 2 / span 2; }
	.markup-toolbar { grid-column: 3 / span 1; grid-row: 2 / span 2; margin-left: -.5rem; }
	.action-toolbar, .categories-card { grid-column: 1 / span 1; grid-row: 2 / span 1; margin: 0 -.5rem 0 .5rem; justify-self: end; }
	.edit-toolbar__buttons { grid-template-columns: 1fr; }
}

@media screen and (min-width: 1400px) {
	.edit-toolbar__buttons { grid-template-columns: 1fr 1fr; }
}

*, *::before, *::after {box-sizing: border-box;}
html { height:100%; padding:0; }
body { margin: 0; font-size:16px; font-family: 'osmarks-primary', sans-serif; color: black; }
input, kbd { font: inherit; color: inherit; }
textarea {font-size:16px; font-family: inherit; line-height: 150%; }

.edit_no-preview { height: 90vh; }
.edit_with-preview .edit-form { height: 90vh; }
.edit__title { margin-top: 0; }
.edit__preview { border: 2px dashed #ddd; padding: 10px; margin: 0 -10px; }
.edit-form__textarea { width: 100%; height: 80vh; min-height: 4rem; }
.edit-form p { margin: .25rem 0; }
.edit-form__message { width: 100%; margin: 0.25em 0; }
.edit-form__save { font-weight: bold; }
.edit-toolbar__buttons, .edit-toolbar__help { margin: .5rem; }
.edit-form { height: 100%; display: flex; flex-direction: column; }

.icon {margin-right: .25rem; vertical-align: bottom; }

main h1:not(.navi-title) {font-size:1.7rem;}
blockquote { margin: 0; padding-left: .75rem; }
.wikilink_external { padding-left: 1.2rem; }
.wikilink_gopher { background: transparent left no-repeat url("/static/icon/gopher-proto.svg"); }
.wikilink_http, .wikilink_https { background: transparent left no-repeat url("/static/icon/http-proto.svg"); }
.wikilink_gemini { background: transparent left no-repeat url("/static/icon/gemini-proto.svg"); }
.wikilink_mailto { background: transparent left no-repeat url("/static/icon/mailto-proto.svg"); }

article { overflow-wrap: break-word; word-wrap: break-word; word-break: break-word; line-height: 150%; }
main h1 { margin: .5rem 0 0 0; font-family: osmarks-mono, sans-serif; }
main h2, main h3, main h4, main h5, main h6 { margin: 1.5rem 0 0 0; clear: both; font-family: osmarks-mono, sans-serif; }
.heading__link { text-decoration: none; display: inline-block; }
.heading__link::after { width: 1rem; content: "§"; color: transparent; }
.heading__link:hover::after, .heading__link:active::after { color: #999; }
article p { margin: .5rem 0; }
article ul, ol { padding-left: 1.5rem; margin: .5rem 0; }
article code { padding: .1rem .3rem; font-size: 90%; font-family: osmarks-mono, 'Menlo', 'PT Mono', monospace; }
article pre.codeblock { padding:.5rem; white-space: pre-wrap; }
.codeblock code {padding:0; font-size:15px;}
.transclusion { margin-bottom: .25rem; clear: both; }
.transclusion_failed { padding: 0 .5rem; }
.transclusion__content > *:not(.binary-container) {margin: 0.5rem; }
.transclusion__link {position: relative; display: block; float: right; text-align: right; font-style: italic; margin-right: .25rem; text-decoration: none; z-index: 2;}
.transclusion__link::before {content: "⇐ ";}
/* ... */

